@@ -18,6 +18,8 @@ Post v23.09.0
   - Support selecting encapsulation IP based on the source/destination VIF's
     settting. See ovn-controller(8) 'external_ids:ovn-encap-ip' for more
     details.
+  - IGMP_Group has new "protocol" column that displays the the group
+    protocol version.
 
 OVN v23.09.0 - 15 Sep 2023
 --------------------------
